# ambient-codex

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  ambient-codex-threat-model.md
plugins/ambient-codex/: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
plugins/ambient-codex/.codex-plugin/: plugin.json
plugins/ambient-codex/ambient_codex/: __init__.py  agent_command.py  agent_config.py  ask_command.py  audit_command.py  audit_core.py  audit_hook_command.py  audit_inputs.py  audit_planning.py  audit_prompts.py  audit_prose.py  build_apply.py  build_command.py  build_state_command.py  build_workflow.py  cache_store.py  capability_runtime.py  catalog_command.py  chat_workflow.py  chunking.py  cli_commands.py  cli_dispatch.py  cli_entrypoint.py  cli_parser.py  client_facade.py  code_workflow.py  completion_command.py  config_store.py  constants.py  context_command.py  cost_runtime.py  credentials.py  doctor_command.py  facade_adapters.py  generation_commands.py  intake.py  launcher.py  launcher_command.py  maintenance_commands.py  map_command.py  (+29 more)
plugins/ambient-codex/docs/: CLI_REFACTOR_PROGRESS.md  CLI_REFACTOR_SCOPE.md  CODEX_NATIVE_ARCHITECTURE.md  MODEL_TUNING.md  PRODUCTION_REBUILD_PLAN.md  RELEASING.md  STRESS_TEST_PLAN.md
plugins/ambient-codex/hooks/: session-start.sh
plugins/ambient-codex/mcp/: ambient_mcp.py  ambient_mcp_catalog.py  ambient_mcp_framing.py  ambient_mcp_launcher.js  ambient_mcp_tool_handlers.py
plugins/ambient-codex/scripts/: ambient-codex-launcher.py
plugins/ambient-codex/tests/: __init__.py  catalog.json  test_ambient.py  test_ambient_architecture_review.py  test_ambient_features.py  test_ambient_map.py  test_ambient_v10_receipt_remediation.py  test_ambient_v11_quality.py  test_ambient_v12_quality_fixes.py  test_ambient_v13_quality_fixes2.py  test_ambient_v14_telemetry.py  test_ambient_v15_attempt_loop.py  test_ambient_v16_request_spec.py  test_ambient_v17_spend_gating.py  test_ambient_v18_fallback_fanout.py  test_ambient_v19_fb_reserve.py  test_ambient_v2.py  test_ambient_v20_adaptive.py  test_ambient_v20_same_model_mr_fb.py  test_ambient_v21_polish.py  test_ambient_v21_prose_recovery.py  test_ambient_v22_build_adaptive.py  test_ambient_v23_tripwire.py  test_ambient_v24_stdin_dash.py  test_ambient_v25_polish.py  test_ambient_v26_prod_hardening.py  test_ambient_v27_build_jsonl.py  test_ambient_v27_features.py  test_ambient_v28_config.py  test_ambient_v29_codex_control.py  test_ambient_v3.py  test_ambient_v3_reduce_fixes.py  test_ambient_v3_remediation.py  test_ambient_v3_routing.py  test_ambient_v4_fleet.py  test_ambient_v5_fleet_hardening.py  test_ambient_v6_repo.py  test_ambient_v7_repo_remediation.py  (+87 more)
(+14 files in other folders)
