[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-codex"
version = "1.5.7"                       # keep in sync with .codex-plugin/plugin.json + bin/ambient __version__
description = "A Codex-native Ambient plugin for delegation, audits, builds, and decentralized inference"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["ambient", "llm", "code-review", "codex", "inference", "delegation"]
dependencies = []                       # stdlib only — no third-party runtime deps

[project.urls]
Homepage = "https://github.com/cryptoxinu/ambient-codex"

# Single-file CLI: install bin/ambient onto PATH as `ambient` with NO second copy
# of the source (avoids the two-divergent-copies problem). `pipx install .` works.
[tool.setuptools]
script-files = ["bin/ambient"]
packages = []                           # no importable packages — disable auto-discovery
py-modules = []

[tool.pytest.ini_options]
# Canonical runner is `python3 -m unittest discover -s tests`; this only lets
# `pytest tests/` collect despite the sibling-module imports (tests/ is a pkg).
pythonpath = ["tests"]
